--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Gratzi - Cooming Soon</title>
+    <title>Gratzi - Coming Soon</title>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,7 +52,6 @@
 <div id="myModal" class="reveal-modal">
     <h1>Join the revolution.</h1>
 <!--
-
     <p>Gratzi is a new way to create, share, filter, and profit on the internet.</p>
 -->
 
